--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ python-multipart==0.0.6
 jinja2==3.1.2
 PyMuPDF==1.23.8
 python-docx==0.8.11
-google-generativeai==0.3.0
-groq==0.9.0
+google-generativeai==0.4.0
+groq==0.10.0
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
-pypdf2==3.0.1
-httpx==0.27.2
+pypdf==4.2.0
+httpx==0.25.0
+supabase==2.4.0
+PyJWT==2.8.0
+python-jose==3.3.0
